--- a/.github/workflows/pr_workflow.yml
+++ b/.github/workflows/pr_workflow.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - master
+      - main
       - staging
 
 jobs:
@@ -28,6 +29,10 @@ jobs:
         run: npm install
       - name: Generate key
         run: php artisan key:generate
+      - name: Run migrations
+        env:
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
+        run: php artisan migrate
       - name: Execute tests (Unit and Feature tests) using PHPUnit
         env:
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
